[feat] add enpoints for psql functions
