# docs/openapi.yaml
@@ -1039,6 +1039,26 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/DocumentResponse"
+  /api/v1/upks/{id}/employees:
+    get:
+      tags:
+      - upk-controller
+      operationId: getUpkEmployees
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/UserResponse"
   /api/v1/tickets/{id}/related:
     get:
       tags:
@@ -1106,6 +1126,46 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/PagedResponseNotificationResponse"
+  /api/v1/documents/ticket/{ticketId}:
+    get:
+      tags:
+      - document-controller
+      operationId: getDocumentsByTicket
+      parameters:
+      - name: ticketId
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/DocumentResponse"
+  /api/v1/documents/active:
+    get:
+      tags:
+      - document-controller
+      operationId: getActiveDocuments
+      parameters:
+      - name: userId
+        in: query
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/DocumentResponse"
 components:
   schemas:
     UserRequest:
